--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,9 +1,9 @@
-<resources>
-
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.NumbersToLetters" parent="Base.Theme.NumbersToLetters">
         <!-- Transparent system bars for edge-to-edge -->
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="O_MR1">?attr/isLightTheme</item>
     </style>
 </resources>
